--- a/public/download.html
+++ b/public/download.html
@@ -6,6 +6,8 @@
     <title>DOWNLOAD</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <style>
         /* download.html 전용 스타일 */
         .download-link {
@@ -66,10 +68,9 @@
         if (aiImageUrl) {
             const decodedUrl = decodeURIComponent(aiImageUrl);
             const filename = decodedUrl.split('/').pop();
-            // AI 결과 이미지는 /images/ 폴더 바로 아래에 저장되므로, /api/download/ 경로로 직접 요청합니다.
             const downloadApiUrl = `/api/download/${filename}`;
 
-            document.getElementById('finalImagePreview').src = decodedUrl; // AI 이미지 표시
+            document.getElementById('finalImagePreview').src = decodedUrl;
             console.log("Displaying AI image from:", decodedUrl);
 
             document.getElementById('showDownloadOptionsBtn').addEventListener('click', () => {
