--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
@@ -59,6 +60,10 @@
                 <option value="default">STYLE (Optional)</option>
                 <option value="cartoon">Cartoon</option>
                 <option value="oilpainting">Oil Painting</option>
+                <option value="watercolor">Watercolor</option>
+                <option value="pixelart">Pixel Art</option>
+                <option value="photorealistic">Photorealistic</option>
+                <option value="cyberpunk">Cyberpunk</option>
             </select>
         </div>
     </div>
@@ -88,6 +93,7 @@
     const qrOriginalImage = document.getElementById('qrOriginalImage');
     const qrFileStatus = document.getElementById('qrFileStatus');
 
+    // --- 모드 전환 로직 ---
     document.querySelectorAll('.mode-btn').forEach(button => {
         button.addEventListener('click', () => {
             currentMode = button.dataset.mode;
@@ -102,6 +108,7 @@
         });
     });
 
+    // --- 1. PC 업로드 로직 ---
     uploadButton.addEventListener('click', () => fileUploader.click());
     fileUploader.addEventListener('change', (event) => {
         pcUploadedFile = event.target.files[0];
@@ -117,6 +124,7 @@
         reader.readAsDataURL(pcUploadedFile);
     });
 
+    // --- 3. QR 업로드 로직 ---
     qrUploadStartButton.addEventListener('click', startQrUploadSession);
     cancelQrButton.addEventListener('click', cancelQrUploadSession);
 
@@ -169,6 +177,7 @@
         qrUploadStartButton.style.display = 'inline-block';
     }
 
+    // --- AI 변환 버튼 클릭 시 (통합 로직) ---
     document.getElementById('aiConvertButton').addEventListener('click', async () => {
         let prompt = document.getElementById('textPromptInput').value;
         const style = document.getElementById('styleSelect').value;
