feat: Add favicon concept to main title for branding consistency

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>AI STUDIO</h1>
+    <h1>AI STUDIO <i class="fas fa-paint-brush"></i></h1>
 
     <div class="card step-card">
         <h2>01. MODE</h2>
