--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,32 @@
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+
+    <style>
+        /* [추가] 갤러리 버튼을 위한 스타일 */
+        .gallery-nav {
+            position: absolute;
+            top: 25px;
+            right: 25px;
+        }
+        .gallery-nav-btn {
+            background-color: transparent;
+            border: 2px solid #111;
+            padding: 8px 12px;
+            font-size: 0.9em;
+            font-weight: bold;
+        }
+        .gallery-nav-btn:hover {
+            background-color: #111;
+            color: white;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
+
+    <a href="gallery.html" class="btn gallery-nav-btn gallery-nav"><i class="fas fa-images"></i> GALLERY</a>
+
     <h1>AI STUDIO <i class="fas fa-paint-brush"></i></h1>
 
     <div class="card step-card">
@@ -93,7 +116,6 @@
     const qrOriginalImage = document.getElementById('qrOriginalImage');
     const qrFileStatus = document.getElementById('qrFileStatus');
 
-    // --- 모드 전환 로직 ---
     document.querySelectorAll('.mode-btn').forEach(button => {
         button.addEventListener('click', () => {
             currentMode = button.dataset.mode;
@@ -108,7 +130,6 @@
         });
     });
 
-    // --- 1. PC 업로드 로직 ---
     uploadButton.addEventListener('click', () => fileUploader.click());
     fileUploader.addEventListener('change', (event) => {
         pcUploadedFile = event.target.files[0];
@@ -124,7 +145,6 @@
         reader.readAsDataURL(pcUploadedFile);
     });
 
-    // --- 3. QR 업로드 로직 ---
     qrUploadStartButton.addEventListener('click', startQrUploadSession);
     cancelQrButton.addEventListener('click', cancelQrUploadSession);
 
@@ -177,7 +197,6 @@
         qrUploadStartButton.style.display = 'inline-block';
     }
 
-    // --- AI 변환 버튼 클릭 시 (통합 로직) ---
     document.getElementById('aiConvertButton').addEventListener('click', async () => {
         let prompt = document.getElementById('textPromptInput').value;
         const style = document.getElementById('styleSelect').value;
