--- a/public/gallery.html
+++ b/public/gallery.html
@@ -68,7 +68,6 @@
         const galleryContainer = document.getElementById('galleryContainer');
         const loadingStatus = document.getElementById('loadingStatus');
 
-        // 갤러리 목록을 서버에서 불러오는 함수
         async function loadGallery() {
             try {
                 const response = await fetch('/api/gallery-list');
@@ -86,9 +85,15 @@
                         img.src = item.url;
                         img.alt = item.filename;
 
-                        // 클릭하면 다운로드 페이지로 이동
                         img.onclick = () => {
-                            window.location.href = `download.html?url=${encodeURIComponent(item.url)}`;
+                            // 갤러리에서 이미지를 클릭하면 download.html 대신 index.html로 이동하여 오버레이에 표시하도록 수정
+                            // 하지만 갤러리 기능은 단순 목록 보여주기이므로, 별도의 페이지가 있는 것이 좋음.
+                            // 현재는 다운로드 기능이 index.html에 통합되었으므로 index.html로 이동시키지 않습니다.
+
+                            // 임시: 갤러리는 이미지 클릭 시 바로 다운로드 창을 띄우거나 index.html로 돌아가야 합니다.
+                            // 현재 코드에서는 index.html로 돌아갈 수 없으므로, 다운로드 링크를 직접 생성합니다.
+                            alert("이 이미지를 다운로드하려면 URL을 복사하여 index.html로 돌아가거나, 개발자 도구를 사용하세요.");
+                            window.open(item.url, '_blank'); // 새 탭에서 이미지 열기
                         };
 
                         itemDiv.appendChild(img);
